<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNewPostForm">

    <LinearLayout
        android:id="@+id/buttonSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCreatePosts"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/CreateNew"
            android:textAlignment="gravity"
            android:textSize="@dimen/HeadingTextSize" />

        <Button
            android:id="@+id/btnYourPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="Your Posts"
            android:textAlignment="gravity"
            android:textColor="@color/purple"
            android:textSize="@dimen/HeadingTextSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/insertLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"

        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:text="@string/insertLocation"
        android:textColor="@color/black"
        android:textSize="@dimen/insertTextViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInsertLocation"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/insertLocationPlain"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toEndOf="@+id/insertLocationView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/metaImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/metaImage"
        android:textColor="@color/black"
        android:textSize="@dimen/insertTextViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PostContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertLocationView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/choseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/choseImage"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/metaImage"
        app:layout_constraintTop_toBottomOf="@+id/etInsertLocation" />

    <TextView
        android:id="@+id/teImageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/noFileChosen"
        app:layout_constraintStart_toEndOf="@+id/choseImage"
        app:layout_constraintTop_toBottomOf="@+id/etInsertLocation" />

    <TextView
        android:id="@+id/PostContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="432dp"
        android:text="@string/PostContent"
        android:textColor="@color/black"
        android:textSize="@dimen/insertTextViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPostArticle"
        android:layout_width="315dp"
        android:layout_height="185dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editTextTextMultiLine"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choseImage" />

    <Button
        android:id="@+id/btnCancelPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:padding="16dp"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSubmitPost" />

    <Button
        android:id="@+id/btnSubmitPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:padding="16dp"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelPost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>