<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="30dp"
        android:text="Travel SL"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/mainTitleSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boxborder"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/txtBoxPadding"
        android:textSize="@dimen/txtBoxTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boxborder"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/txtBoxPadding"
        android:textSize="@dimen/txtBoxTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        tools:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="@dimen/loginBtnLength"
        android:layout_height="@dimen/loginBtnWidth"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/button_white"
        android:text="@string/btnLogin"
        android:textColor="@color/black"
        android:textSize="@dimen/txtBoxTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="150dp"
        android:backgroundTint="#92000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/aboutus"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="20dp"
            android:text="@string/follow"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/term"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/adminlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="80dp"
            android:text="@string/adminlogin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/contactus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/contactus"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="45dp"
            android:backgroundTint="#ffffff"
            android:tint="#ffffff"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="44dp"
            android:tint="#ffffff"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="43dp"
            android:tint="#ffffff"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="22dp"
            android:layout_height="21dp"
            android:layout_marginLeft="360dp"
            android:layout_marginTop="45dp"
            android:tint="#ffffff"
            app:srcCompat="@drawable/tiktok_new" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:onClick="registerClick"
        android:padding="0dp"
        android:shadowColor="@color/transparent"
        android:text="@string/signup"
        app:layout_constraintEnd_toStartOf="@+id/forgotpwd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <Button
        android:id="@+id/forgotpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:paddingRight="10dp"
        android:shadowColor="@color/transparent"
        android:text="@string/forgotpwd"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:padding="5dp"
        android:shadowColor="@color/transparent"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/forgotpwd"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="11dp"
        android:layout_height="17dp"
        android:layout_marginTop="17dp"
        android:tint="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/forgotpwd"
        app:layout_constraintStart_toEndOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:srcCompat="@drawable/dot" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="11dp"
        android:layout_height="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        android:tint="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintStart_toEndOf="@+id/forgotpwd"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:srcCompat="@drawable/dot" />
</androidx.constraintlayout.widget.ConstraintLayout>