<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <Button
        android:id="@+id/profilebtn"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/signoutbtn"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="Sign Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/settingsbtn"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/button_styles"
        android:text="@string/settings"
        app:layout_constraintEnd_toStartOf="@+id/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/todobtn"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/planner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>