<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <Button
        android:id="@+id/settings"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/button_styles"
        android:text="@string/settings"
        app:layout_constraintEnd_toStartOf="@+id/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/todo"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="327dp"
        android:layout_height="657dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:srcCompat="@drawable/country" />

    <TextView
        android:id="@+id/todoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="56dp"
        android:text="@string/visited"
        android:textColor="@color/app_color"
        android:textSize="@dimen/txtSIze"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/navbarLength"
        android:layout_height="@dimen/navbarWidth"
        android:backgroundTint="@color/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="668dp">

        <ImageView
            android:id="@+id/dashboardbtn"
            android:layout_width="47dp"
            android:layout_height="42dp"
            android:layout_marginLeft="322dp"
            android:layout_marginTop="9dp"
            android:tint="@color/app_color2"
            app:srcCompat="@drawable/dashboard" />

        <ImageView
            android:id="@+id/healthbtn"
            android:layout_width="52dp"
            android:layout_height="39dp"
            android:layout_marginLeft="229dp"
            android:layout_marginTop="12dp"
            android:tint="@color/app_color2"
            app:srcCompat="@drawable/health" />

        <ImageView
            android:id="@+id/searchbtn"
            android:layout_width="51dp"
            android:layout_height="43dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="10dp"
            android:tint="@color/app_color2"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/homebtn"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="9dp"
            android:tint="@color/app_color2"
            app:srcCompat="@drawable/home2" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>