<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgrond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities_chamika.Dashboard">

    <Button
        android:id="@+id/settings"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/button_styles"
        android:text="@string/settings"
        app:layout_constraintEnd_toStartOf="@+id/newAdmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newAdmin"
        android:layout_width="@dimen/dashboardBtnLength1"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/newadmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/adminprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/adminsignout"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/button_styles2"
        android:backgroundTint="@color/delete"
        android:text="Sign Out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:backgroundTint="@color/design_default_color_error" />

    <Button
        android:id="@+id/healthbtn"
        android:layout_width="@dimen/dashboardBtnLength2"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_styles"
        android:text="Admin Health Division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>